--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csvtojson": "^2.0.7",
     "easyconvert": "0.0.2",
     "js2xmlparser": "^3.0.0",
     "jsdom": "^11.11.0",
