--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "easyconvert": "0.0.2",
     "js2xmlparser": "^3.0.0",
     "jsdom": "^11.11.0",
-    "node-fetch": "^2.1.2"
+    "request": "^2.87.0"
   }
 }
