--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "SET MARKET='GB' && node app.js",
+    "GB": "SET NODE_ENV=GB&& node app.js",
+    "ES": "SET NODE_ENV=ES&& node app.js",
+    "FR": "SET NODE_ENV=FR&& node app.js"
   },
   "author": "",
   "license": "ISC",
