--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "GB": "SET NODE_ENV=GB&& node app.js",
     "ES": "SET NODE_ENV=ES&& node app.js",
     "FR": "SET NODE_ENV=FR&& node app.js",
-    "ES1": "SET NODE_ENV=ES1&& node app.js",
-    "ES2": "SET NODE_ENV=ES2&& node app.js",
-    "ES3": "SET NODE_ENV=ES3&& node app.js"
+    "US": "SET NODE_ENV=US&& node app.js",
+    "RU": "SET NODE_ENV=RU&& node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +21,7 @@
     "fast-csv": "^2.4.1",
     "js2xmlparser": "^3.0.0",
     "jsdom": "^11.11.0",
+    "moment": "^2.22.2",
     "request": "^2.87.0"
   }
 }
