--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "test": "node ./node_modules/mocha/bin/mocha --timeout 55000",
+    "test": "nyc --show-process-tree ./node_modules/mocha/bin/mocha --timeout 55000",
     "start": "SET MARKET='GB' && node app.js",
     "GB": "SET NODE_ENV=GB&& node app.js",
     "ES": "SET NODE_ENV=ES&& node app.js",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "nyc": "^13.0.1"
   }
 }
