--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "csvtojson": "^2.0.7",
     "easyconvert": "0.0.2",
+    "es6-promise-pool": "^2.5.0",
     "fast-csv": "^2.4.1",
     "js2xmlparser": "^3.0.0",
     "jsdom": "^11.11.0",
