--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "main": "app.js",
   "scripts": {
     "test": "nyc ./node_modules/mocha/bin/mocha --timeout 55000 && nyc report --reporter=html",
-    "start": "SET MARKET='GB' && node app.js",
-    "DK": "SET NODE_ENV=DK&& node app.js",
-    "ES": "SET NODE_ENV=ES&& node app.js",
-    "FR": "SET NODE_ENV=FR&& node app.js",
-    "NO": "SET NODE_ENV=NO&& node app.js",
-    "RU": "SET NODE_ENV=RU&& node app.js",
-    "SE": "SET NODE_ENV=SE&& node app.js",
-    "US": "SET NODE_ENV=US&& node app.js",
-    "GB": "SET NODE_ENV=GB&& node app.js"
+    "start": "SET NODE_ENV=GB&& node --max-old-space-size=4096 app.js",
+    "DK": "SET NODE_ENV=DK&& node --max-old-space-size=4096 app.js",
+    "ES": "SET NODE_ENV=ES&& node --max-old-space-size=4096 app.js",
+    "FR": "SET NODE_ENV=FR&& node --max-old-space-size=4096 app.js",
+    "NO": "SET NODE_ENV=NO&& node --max-old-space-size=4096 app.js",
+    "RU": "SET NODE_ENV=RU&& node --max-old-space-size=4096 app.js",
+    "SE": "SET NODE_ENV=SE&& node --max-old-space-size=4096 app.js",
+    "US": "SET NODE_ENV=US&& node --max-old-space-size=4096 app.js",
+    "GB": "SET NODE_ENV=GB&& node --max-old-space-size=4096 app.js"
   },
   "author": "",
   "license": "ISC",
